--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,20 +24,15 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-/*
-header div ul {
-    list-style-type: none;
-   
-}
-*/
-header div ul li {
+
+li  {
     list-style-type: none;
     display: inline-block;
     margin-left: 25px;
@@ -138,3 +133,4 @@ footer {
 footer h1 {
     font-size: 20px;
 }
+     
